<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.user.presentation.ui.fragment.UserDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:background="@color/material_dynamic_primary100"
                android:minHeight="?attr/actionBarSize">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:id="@+id/llUserDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_16"
                android:background="@drawable/white_circle"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textColor="@color/darker_gray"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/company"
                android:textColor="@color/darker_gray"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvBlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/blog"
                android:textColor="@color/darker_gray"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/location"
                android:textColor="@color/darker_gray"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/email"
                android:textColor="@color/darker_gray"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/bio"
                android:textColor="@color/darker_gray"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvPublicRepos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/public_repos"
                android:textColor="@color/darker_gray"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvPublicGists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/public_gists"
                android:textColor="@color/darker_gray"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/followers"
                android:textColor="@color/darker_gray"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/following"
                android:textColor="@color/darker_gray"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>

